Bug 1790435: Don't apply rotor post-filter if AXSearchText is empty r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D160836